generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Role {
  id    Int    @id @default(autoincrement())
  nome  String
  users User[]

  @@map("roles")
}

model User {
  id         Int       @id @default(autoincrement())
  nome       String
  endereco   String?
  telefone   String?
  email      String    @unique
  senhaHash  String
  avatarUrl  String?
  status     String    @default("ativo")
  roleId     Int
  createdAt  DateTime  @default(now())
  resetToken String?   @unique
  resetTokenExpiry DateTime?

  role               Role                @relation(fields: [roleId], references: [id])
  company            Company?
  solicitacoes       SolicitacaoColeta[]
  mensagensEnviadas  Mensagem[]
  mensagensPreAceite MensagemPreAceite[]
  avaliacoesFeitas   Avaliacao[]
  notificacoes       Notificacao[]

  @@map("users")
}

model Company {
  id        Int      @id @default(autoincrement())
  userId    Int      @unique
  cnpj      String   @unique
  descricao String?
  createdAt DateTime @default(now())

  user    User     @relation(fields: [userId], references: [id])
  coletas Coleta[]
  conversasSolicitacao ConversaSolicitacao[]

  @@map("companies")
}

model MaterialTipo {
  id           Int                 @id @default(autoincrement())
  nome         String
  solicitacoes SolicitacaoColeta[]

  @@map("material_tipos")
}

model SolicitacaoColeta {
  id         Int      @id @default(autoincrement())
  titulo     String
  descricao  String
  quantidade String
  // Peso aproximado informado pelo usuário, já normalizado em kg (opcional).
  // Quando presente, é a base "confiável" do cálculo de impacto ambiental;
  // quando ausente, o impacto cai no parser heurístico de `quantidade`.
  pesoEstimadoKg Float?
  endereco   String
  status     String   @default("aprovada")
  aprovado   Boolean  @default(true)
  userId     Int
  materialId Int
  createdAt  DateTime @default(now())

  user     User         @relation(fields: [userId], references: [id])
  material MaterialTipo @relation(fields: [materialId], references: [id])
  imagens  SolicitacaoImagem[]
  coleta   Coleta?
  conversas ConversaSolicitacao[]

  @@map("solicitacao_coleta")
}

model SolicitacaoImagem {
  id            Int    @id @default(autoincrement())
  solicitacaoId Int
  url           String

  solicitacao SolicitacaoColeta @relation(fields: [solicitacaoId], references: [id])

  @@map("solicitacao_imagens")
}

model Coleta {
  id                  Int       @id @default(autoincrement())
  solicitacaoId       Int       @unique
  companyId           Int
  status              String    @default("aceita")
  codigoConfirmacao   String?
  dataAceite          DateTime  @default(now())
  dataPrevisaoColeta  DateTime?
  dataConclusao       DateTime?
  updatedAt           DateTime  @updatedAt

  solicitacao SolicitacaoColeta @relation(fields: [solicitacaoId], references: [id])
  company     Company           @relation(fields: [companyId], references: [id])
  mensagens   Mensagem[]
  avaliacoes  Avaliacao[]

  @@map("coletas")
}

model Avaliacao {
  id         Int      @id @default(autoincrement())
  coletaId   Int
  autorId    Int
  // Direção da avaliação: "usuario_para_empresa" (cidadão avalia a empresa)
  // ou "empresa_para_usuario" (empresa avalia o cidadão). Uma de cada por coleta.
  tipo       String   @default("usuario_para_empresa")
  nota       Int
  comentario String?
  createdAt  DateTime @default(now())

  coleta Coleta @relation(fields: [coletaId], references: [id])
  autor  User   @relation(fields: [autorId], references: [id])

  @@unique([coletaId, tipo])
  @@map("avaliacoes")
}

model Mensagem {
  id          Int      @id @default(autoincrement())
  coletaId    Int
  remetenteId Int
  mensagem    String
  createdAt   DateTime @default(now())

  coleta    Coleta @relation(fields: [coletaId], references: [id])
  remetente User   @relation(fields: [remetenteId], references: [id])

  @@map("mensagens")
}

model ConversaSolicitacao {
  id            Int      @id @default(autoincrement())
  solicitacaoId Int
  companyId     Int
  status        String   @default("aberta")
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  solicitacao SolicitacaoColeta @relation(fields: [solicitacaoId], references: [id])
  company     Company           @relation(fields: [companyId], references: [id])
  mensagens   MensagemPreAceite[]

  @@unique([solicitacaoId, companyId])
  @@map("conversas_solicitacao")
}

model MensagemPreAceite {
  id          Int      @id @default(autoincrement())
  conversaId  Int
  remetenteId Int
  mensagem    String
  createdAt   DateTime @default(now())

  conversa  ConversaSolicitacao @relation(fields: [conversaId], references: [id])
  remetente User                @relation(fields: [remetenteId], references: [id])

  @@map("mensagens_pre_aceite")
}

model Notificacao {
  id        Int      @id @default(autoincrement())
  userId    Int
  tipo      String
  titulo    String
  descricao String
  href      String?
  lida      Boolean  @default(false)
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id])

  @@index([userId, lida])
  @@index([userId, id])
  @@map("notificacoes")
}
